<resources>
    <string name="app_name">Salmon Vault</string>
	
    <string name="SalmonPrefCat">Preferences</string>
    <string name="VaultLocationSummary">Open another vault folder</string>
    <string name="VaultLocationTitle">Vault Location</string>
    <string name="ChangePasswordSummary">Change the current vault password</string>
    <string name="ChangePasswordTitle">Change Password</string>
    <string name="IntegrityCheckSummary">Always check files integrity before opening. Warning: This is buggy and Very Slow for large files.</string>
    <string name="IntegrityCheckTitle">Integrity Check</string>

    <string name="ImportFiles">Import File(s)</string>
    <string name="ImportFolder">Import Folder</string>
    <string name="ExportFiles">Export</string>
    <string name="ExportAndDeleteFiles">Export/Delete</string>
    <string name="Sort">Sort</string>
    <string name="ExportAll">Export All</string>
    <string name="Action">Action</string>
    <string name="Refresh">Refresh</string>
    <string name="CouldNotParseConfig">Could not parse config file, choose another folder!</string>
    <string name="AboutText">Built with .NET Android\nReleased under MIT License</string>
    <string name="Authenticate">Authenticate</string>
    <string name="Password">Password</string>
    <string name="RetypePassword">Retype Password</string>
    <string name="SetPassword">Set Password</string>
    <string name="PasswordsDontMatch">Passwords Don\'t Match</string>
    <string name="CreateFolder">Create Folder</string>
    <string name="ChooseApp">Choose App</string>
    <string name="GetSourceCode">Get Source Code</string>
    <string name="Settings">Settings</string>
    <string name="DeleteAll">Delete All</string>
    <string name="About">About</string>
    <string name="SelectFilesToImport">Select File(s) to Import</string>
    <string name="FileSizeTooLarge">File size too large, try export instead</string>
    <string name="Exit">Exit</string>
    <string name="PleaseWaitWhileDecrypting">Please Wait while decrypting</string>
    <string name="CouldNotImportFiles">Could not import files</string>
    <string name="CouldNotOpenConfigFile">Could not open config file, choose another folder</string>
    <string name="NewPassword">New Password</string>
    <string name="File">File</string>
    <string name="View">View</string>
    <string name="Open">Open</string>
    <string name="Save">Save</string>
    <string name="ViewAsText">View As Text</string>
    <string name="ViewExternal">View External</string>
    <string name="OpenExternalInstructions">There are no internal viewers available. To view this file using an external app click Ok. To edit this file open it from within an external app that uses the Android File Picker or re-import it manually.</string>

    <string name="ImportStopped">Import Stopped</string>
    <string name="ImportFailed">Import Failed</string>
    <string name="SomeFilesFailed">Some Files Failed</string>
    <string name="ImportComplete">Import Complete</string>

    <string name="ExportStopped">Export Stopped</string>
    <string name="ExportFailed">Export Failed</string>
    <string name="ExportComplete">Export Complete</string>

    <string name="Share">Share</string>
    <string name="ShareExternal">Share External</string>
    <string name="FileSavedInSalmonVault">File saved in Salmon Vault</string>
    <string name="NoApplicationsFound">No applications found</string>

    <string name="FilesImported">Files Imported</string>
    <string name="Edit">Edit</string>
    <string name="Delete">Delete</string>
    <string name="SelectFolderForFiles">Select or create a folder for your vault</string>
    <string name="FilesExportedTo">Files exported to</string>
    <string name="FileCorruptOrTampered">File is corrupt or tampered</string>
    <string name="Rename">Rename</string>
    <string name="NewFilename">New Filename</string>
    <string name="ExitApp">Exit application?</string>
    <string name="NewFolder">New Folder</string>
    <string name="FolderName">Folder Name</string>
    <string name="CouldNotCreateFolder">Could not create folder</string>
    <string name="Items">Items</string>
    <string name="DeleteSourceFilesAfterImport">Delete source files after import</string>
    <string name="DeleteFilesAfterImport">Delete files after import</string>
    <string name="Search">Search</string>
    <string name="AnotherProcessRunning">Another process is running</string>
    <string name="Properties">Properties</string>
    <string name="DiskUsage">Disk Usage</string>
    <string name="CouldNotGetFileProperties">Could not get file properties</string>
    <string name="Name">Name</string>
    <string name="Path">Path</string>
    <string name="Size">Size</string>
    <string name="EncryptedName">Encrypted Name</string>
    <string name="EncryptedPath">Encrypted Path</string>
    <string name="EncryptedSize">Encrypted Size</string>
    <string name="Loop">Loop</string>
    <string name="On">On</string>
    <string name="Off">Off</string>
    <string name="AESEncryptionImplementation">AES Encryption Implementation</string>
    <string name="AESImplementation">AES Implementation</string>
    <string name="Default">Default</string>
    <string name="AesIntrinsics">AES Intrinsics</string>
	<string name="Aes">AES</string>
    <string name="PBKDFHashImplementation">PBKDF Hash Implementation</string>
    <string name="PBKDFImplementation">PBKDF Implementation</string>
    <string name="Lambdaworks">Lambdaworks</string>
    <string name="EnableLog">Enable Log</string>
    <string name="EnableLogDetails">Enable Log Details</string>
    <string name="Searching">Searching</string>
    <string name="Stopped">Stopped</string>
    <string name="Stop">Stop</string>
    <string name="Cancel">Cancel</string>
    <string name="Any">Any</string>
    <string name="MatchAnyTerm">Match any term</string>
    <string name="HideScreenContents">Hide Screen Contents</string>
    <string name="Speed">Speed</string>
    <string name="MultiSelect">Multi Select</string>
    <string name="SingleSelect">Single Select</string>
    <string name="DeleteSelected">Delete Selected</string>
    <string name="MoveSelected">Move Selected</string>
    <string name="CopySelected">Copy Selected</string>
    <string name="ExportSelected">Export Selected</string>
    <string name="FilesDeleted">Files Deleted</string>
    <string name="SelectAll">Select All</string>
    <string name="UnselectAll">Unselect All</string>
    <string name="Move">Move</string>
    <string name="Copy">Copy</string>
    <string name="Paste">Paste</string>
    <string name="ItemsSelectedForCopy">Items selected for copy</string>
    <string name="ItemsSelectedForMove">Items selected for move</string>
    <string name="NewFile">New File</string>
    <string name="OpenVault">Open Vault</string>
    <string name="NewVault">New Vault</string>
    <string name="CloseVault">Close Vault</string>
    <string name="ImportAuthFile">Import Auth File</string>
    <string name="ExportAuthFile">Export Auth File</string>
    <string name="RevokeAuth">Revoke Auth</string>
    <string name="DisplayAuthID">Display Auth ID</string>
    <string name="Cut">Cut</string>
    <string name="Error">Error</string>
    <string name="CouldNotGetAuthID">Could not get Auth ID</string>
    <string name="PBKDFAlgo">PBKDF Algorithm</string>
    <string name="SHA1">SHA1</string>
    <string name="SHA256">SHA256</string>
    <string name="Files">Files</string>
    <string name="Complete">Complete</string>
</resources>