...
        android:gravity="left"
        android:paddingLeft="8dp"
        android:paddingTop="2dp"
        android:paddingRight="8dp"
        android:paddingBottom="2dp"
        android:text="fs://"
        app:layout_constraintBottom_toTopOf="@id/list"
        app:layout_constraintTop_toBottomOf="@id/progress_bar" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/list"
        android:layout_width="match_parent"
        android:layout_height="0dp"
...
